fixed overflow exceeding on about and career pages

--- a/src/components/layout/layoutCss.css
+++ b/src/components/layout/layoutCss.css
@@ -34,6 +34,7 @@ body {
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
+  overflow-x: hidden;
 }
 
 
